Fix minor formatting mistakes and typos

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -246,7 +246,7 @@
 						<a target="_blank" href="https://scores.bitbusters.club"
 							>https://scores.bitbusters.club</a
 						>
-						user ID. Required for score report generation.<br />How to optain:
+						user ID. Required for score report generation.<br />How to obtain:
 						Look for the number in your player page URL. For example, If your
 						user page is at https://scores.bitbusters.club/players/75, your
 						optimizer ID is 75.
@@ -278,7 +278,7 @@
 						<li>
 							ceil — Always matches in-game time, but no longer always
 							decreases. Displayed time will jump from x.05 to (x-1).00 to
-							(x-1).95 .
+							(x-1).95.
 						</li>
 					</ul>
 				</section>
