Begin the Prewrite

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" href="/icon.png" />
-		<title>NotCC</title>
 		<meta name="og:type" content="website" />
 		<meta name="og:title" content="NotCC" />
 		<meta
@@ -17,512 +16,10 @@
 		/>
 		<meta name="og:image" content="https://glander.club/notcc/iconBig.png" />
 		<meta name="theme-color" content="#1f61ad" />
+		<title>NotCC</title>
 	</head>
-
-	<body class="gameBody">
-		<template id="tooltipTemplate">
-			<div class="tooltipRoot">
-				<div class="tooltipTriangle"></div>
-				<div class="tooltipBox container buttonTooltipBox"></div>
-			</div>
-		</template>
-		<nav class="sidebar container">
-			<div title="Set Selector" class="sidebarButton" id="selectorTab">
-				<img src="./tabIcons/leaf.svg" tabindex="0" draggable="false" />
-			</div>
-			<div title="Level" class="sidebarButton" id="levelTab">
-				<div class="levelIconContainer">
-					<img src="./tabIcons/level.svg" tabindex="0" draggable="false" />
-					<div id="levelIconText">?</div>
-				</div>
-			</div>
-			<div title="Solutions" class="sidebarButton" id="solutionTab">
-				<img src="./tabIcons/floppy.svg" tabindex="0" draggable="false" />
-			</div>
-			<div title="Optimization" class="sidebarButton" id="optimizationTab">
-				<img src="./tabIcons/clock.svg" tabindex="0" draggable="false" />
-			</div>
-			<div title="Settings" class="sidebarButton bottomButton" id="settingsTab">
-				<img src="./tabIcons/tools.svg" tabindex="0" draggable="false" />
-			</div>
-			<div title="About" class="sidebarButton" id="aboutTab">
-				<img src="./tabIcons/info.svg" tabindex="0" draggable="false" />
-			</div>
-		</nav>
-		<dialog id="levelListDialog">
-			<form method="dialog">
-				<header>Level list</header>
-				<section>
-					<table id="levelList">
-						<thead>
-							<tr>
-								<th>#</th>
-								<th>Level</th>
-								<th>Best time</th>
-								<th>Best score</th>
-								<!-- <th>Best real time</th> -->
-							</tr>
-						</thead>
-						<tbody></tbody>
-					</table>
-				</section>
-				<footer>
-					<button type="button" id="generateReportButton">
-						Generare report</button
-					><button type="submit">Ok</button>
-				</footer>
-			</form>
-		</dialog>
-		<dialog id="scoreReportGenDialog" class="textDialog">
-			<form method="dialog">
-				<header>Score report generator</header>
-				<section class="loading-stage">Fetching scoreboard data...</section>
-				<section class="error-stage">
-					Something went wrong: <span class="errorField"></span>
-				</section>
-				<section class="default-stage">
-					<template id="reportLineTemplate">
-						<div><input type="checkbox" /><span></span></div>
-					</template>
-					<div id="reportText">
-						<div><span class="setName"></span> scores:</div>
-						<div id="linesPoint"></div>
-						<div>NotCC git-%VITE_VERSION%</div>
-					</div>
-				</section>
-				<footer>
-					<button type="button" id="copyReport">Copy</button>
-					<button type="submit">Close</button>
-				</footer>
-			</form>
-		</dialog>
-		<dialog id="simpleDialog" class="textDialog">
-			<form method="dialog">
-				<header>Alert!</header>
-				<section>Alert body</section>
-				<footer></footer>
-			</form>
-		</dialog>
-		<dialog id="allAttemptsDialog">
-			<template id="successfulAttemptTemplate">
-				<div class="container successful">
-					<div class="firstLine">
-						<div class="expandTriangle"></div>
-						<div class="metrics">???s / ???pts</div>
-						<button type="button" class="replayButton">Replay</button>
-						<div class="time">
-							<span class="startTime">???</span> →
-							<span class="endTime">???</span>
-						</div>
-					</div>
-					<div class="extraInfo">
-						<div>Glitches used:</div>
-						<ul class="glitchList"></ul>
-						<!-- FIXME Real time is *very* wrong for some reason. Fix ASAP -->
-						<!-- <div>Real time: <span class="realTime">???</span>s</div> -->
-					</div>
-				</div>
-			</template>
-			<template id="failedAttemptTemplate">
-				<div class="container failed">
-					<div>Fail reason: "<span class="failReason">???</span>"</div>
-					<div class="time">
-						<span class="startTime">???</span> →
-						<span class="endTime">???</span>
-					</div>
-				</div>
-			</template>
-			<form method="dialog">
-				<header>All attempts</header>
-				<section></section>
-				<footer>
-					<!-- <button id="verifyAllButton" type="button">Verify all</button> -->
-					<button type="submit">Ok</button>
-				</footer>
-			</form>
-		</dialog>
-		<dialog id="themeSelectorDialog" class="textDialog">
-			<form method="dialog">
-				<header>Theme select</header>
-				<section class="preferences">
-					<label for="themeHue">Hue:</label>
-					<input id="themeHue" type="range" min="0" max="360" />
-
-					<label for="themeSaturation">Saturation:</label>
-					<input id="themeSaturation" type="range" min="0" max="100" />
-				</section>
-				<footer>
-					<button value="ok" type="submit">Ok</button>
-					<button value="cancel" type="submit">Cancel</button>
-				</footer>
-			</form>
-		</dialog>
-		<dialog id="tilesetSelectorDialog">
-			<template id="tilesetInfoTemplate">
-				<span>
-					<h3 id="tsetTitle">Tile World</h3>
-					<p id="tsetDescription">Blah bleh bloh</p>
-					<p>
-						By: <span id="tsetCredits">48px</span><br />
-						Tile size: <span id="tsetTileSize">48px</span><br />
-						Wire width: <span id="tsetWireWidth">2px</span>
-					</p>
-				</span>
-			</template>
-			<form method="dialog">
-				<header>Tileset select</header>
-				<section>
-					<table id="tilesetList">
-						<thead>
-							<tr>
-								<th style="width: 10%">Selected</th>
-								<th>Preview</th>
-								<th>Info</th>
-								<th></th>
-							</tr>
-						</thead>
-						<tbody></tbody>
-						<tfoot id="externalTilesetFooter">
-							<tr>
-								<td colspan="4">
-									<button id="addTilesetButton" type="button">+ Tileset</button>
-								</td>
-							</tr>
-						</tfoot>
-					</table>
-				</section>
-				<footer>
-					<button value="ok" type="submit">Ok</button>
-					<button value="cancel" type="submit">Cancel</button>
-				</footer>
-			</form>
-		</dialog>
-		<dialog id="settingsDialog" class="textDialog">
-			<form method="dialog">
-				<header>Settings</header>
-				<section class="preferences">
-					<h3>Visuals</h3>
-					<label for="mainTheme">Main theme:</label>
-					<span
-						><button type="button" id="mainTheme" class="themeButton">
-							<div class="themeCircle"></div>
-						</button>
-					</span>
-
-					<label for="currentTileset">Tileset:</label>
-					<span>
-						<b id="currentTilesetText">CGA17000</b>
-						<button type="button" id="currentTileset">Change tileset</button>
-					</span>
-					<h3>Glitches</h3>
-					<label for="preventNonLegalGlitches"
-						>Prevent non-legal glitch use:</label
-					>
-					<span><input type="checkbox" id="preventNonLegalGlitches" /></span>
-					<p>
-						There are a couple of glitches which are not allowed in competitive
-						play, which are called non-legal glitches. If this option is
-						enabled, an attempt to use a non-legal glitch will fail the level.
-					</p>
-					<label for="preventSimulMovement"
-						>Prevent simultaneous movement:</label
-					>
-					<span><input type="checkbox" id="preventSimulMovement" /></span>
-					<p>
-						Simultaneous character movement is a non-legal glitch where two
-						characters can be moved at the same by pressing the character switch
-						and a direction key at the same time. If this option is enabled,
-						pressing the character switch key will let go of all other input
-						keys, preventing the simultaneous character movement glitch.
-					</p>
-					<h3>Score</h3>
-					<label for="optimizerId">Optimizer ID</label
-					><span
-						><input type="number" id="optimizerId" />
-						<span id="currentUsername"></span
-					></span>
-					<p>
-						The
-						<a target="_blank" href="https://scores.bitbusters.club"
-							>https://scores.bitbusters.club</a
-						>
-						user ID. Required for score report generation.<br />How to obtain:
-						Look for the number in your player page URL. For example, If your
-						user page is at https://scores.bitbusters.club/players/75, your
-						optimizer ID is 75.
-					</p>
-					<h3>ExaCC</h3>
-					<label for="integerTimeRounding">Integer time rounding</label>
-					<span
-						><select id="integerTimeRounding">
-							<option value="floor">floor</option>
-							<option value="floor + 1">floor + 1</option>
-							<option value="ceil" selected>ceil</option>
-						</select></span
-					>
-					<p>
-						The integer part of the time left can be rounded in different ways,
-						depending on the wanted interpretation. Avaliable rounding modes:
-					</p>
-					<ul>
-						<li>
-							floor — Equivalent to the amount of time until the game is lost
-							via time out. Represents how the game internally tracks time left,
-							but the shown value must be ceiled in one's head to know the
-							in-game time.
-						</li>
-						<li>
-							floor + 1 — Resembles how time works in Lynx and mostly matches
-							in-game time, but is inaccurate when the decimal is .00.
-						</li>
-						<li>
-							ceil — Always matches in-game time, but no longer always
-							decreases. Displayed time will jump from x.05 to (x-1).00 to
-							(x-1).95.
-						</li>
-					</ul>
-				</section>
-				<footer>
-					<button value="ok" type="submit">Ok</button>
-					<button value="cancel" type="submit">Cancel</button>
-				</footer>
-			</form>
-		</dialog>
-		<dialog id="aboutDialog" class="textDialog">
-			<form method="dialog">
-				<header>About NotCC</header>
-				<section>
-					<h3>NotCC</h3>
-					<p>
-						NotCC is an
-						<a target="_blank" href="https://github.com/TheGLander/NotCC"
-							>open-source</a
-						>
-						accurate CC2 emulator. <br /><br />
-						Made by
-						<a target="_blank" href="https://glander.club/">G lander</a>.
-					</p>
-					<p>Thanks to:</p>
-					<ul>
-						<li>
-							The Chip's Challenge community, residing at
-							<a target="_blank" href="https://bitbusters.club"
-								>The Bit Busters Club</a
-							>. Also, more specifically:
-						</li>
-						<li>
-							<a target="_blank" href="https://eev.ee/">eevee</a>, for creating
-							the first CC2 emulator,
-							<a target="_blank" href="https://c.eev.ee/lexys-labyrinth/"
-								>Lexy's Labyrinth</a
-							>, which NotCC heavily borrowed (and still borrows) from.
-						</li>
-						<li>
-							Markus O.,
-							<a target="_blank" href="https://github.com/Bacorn42">Bacorn</a>,
-							and
-							<a target="_blank" href="https://github.com/SicklySilverMoon"
-								>Sickly</a
-							>, for creating and maintaining SuperCC, the optimization tool
-							ExaCC is heavily inspired by.
-						</li>
-						<li>
-							<a target="_blank" href="https://github.com/zrax">Zrax</a>, for
-							creating a very helpful suite of CC tools, appropriately called
-							<a target="_blank" href="http://cctools.zrax.net">CCTools</a>.
-						</li>
-						<li>
-							Anders Kaseorg and Kawaiiprincess, for creating and porting to CC2
-							(respectively) the bundled Tile World tileset.
-						</li>
-						<li>
-							<a
-								target="_blank"
-								href="https://wiki.bitbusters.club/User:Sharpeye468"
-								>Sharpeye</a
-							>, for finding a bug with ExaCC auto-scaling and being one of the
-							first people to use ExaCC for optimization.
-						</li>
-						<li>
-							<a target="_blank" href="https://tylersontag.com">Tyler Sontag</a
-							>, for creating the very, <i>very</i> helpful resident Discord
-							bot,
-							<a target="_blank" href="https://bitbusters.club/gliderbot"
-								>Gliderbot</a
-							>.
-						</li>
-						<li>
-							<a
-								target="_blank"
-								href="https://www.blogger.com/profile/14488214217998239760"
-								>IHNN</a
-							>, for providing details and feedback on non-legal glitches and
-							their prevention.
-						</li>
-					</ul>
-					<p class="small">
-						Last change: %VITE_LAST_COMMIT_INFO%.<br />
-						Built at %VITE_BUILD_TIME%.
-					</p>
-				</section>
-				<footer>
-					<button type="submit">Close</button>
-				</footer>
-			</form>
-		</dialog>
-		<dialog id="nonFreeSetDialog" class="textDialog">
-			<form method="dialog">
-				<header>Non-free set</header>
-				<section>
-					<p>
-						The set you are trying to load is non-free, and cannot be legally
-						accessed from the Gliderbot set repository. If you don't have it,
-						you can
-						<a target="_blank" id="nonFreeSteamLink">but it on Steam here</a>.
-					</p>
-					<p>
-						If you have a copy of the set, load it into NotCC with the Load
-						directory option below.
-					</p>
-				</section>
-				<footer>
-					<button type="submit" value="load">Load directory</button>
-					<button type="submit" value="cancel">Cancel</button>
-				</footer>
-			</form>
-		</dialog>
-		<main id="loadingPage" class="container">
-			<p>Loading, standy...</p>
-		</main>
-		<main id="levelPlayerPage" class="container closedPage playerPage">
-			<div class="viewportArea">
-				<canvas class="viewportCanvas" class="pixelCanvas"></canvas>
-				<div id="levelViewportOverlay">
-					<div id="overlayWinContents">
-						<h3>You won!!</h3>
-						<div class="buttonContainer container">
-							<button id="scoresButton">Scores</button>
-							<button id="nextLevelButton" class="mainButton">
-								Next level
-							</button>
-							<button id="explodeJupiterButton">Explode Jupiter</button>
-						</div>
-					</div>
-					<div id="overlayLoseContents">
-						<h3 class="deathOnly">You died...</h3>
-						<h3 class="timeoutOnly">You ran out of time...</h3>
-						<div class="buttonContainer container">
-							<button id="restartButton" class="mainButton">Restart</button>
-						</div>
-					</div>
-					<div id="overlayPauseContents">
-						<h3>Paused</h3>
-						<div class="statsContainer container">
-							<h4>Did you know?</h4>
-							You can submit fun facts for this box by contacting ʐ̈ MANNNNNNN
-							via the
-							<a target="_blank" href="https://discord.gg/a7rTCkycpD"
-								>Chip's Challenge Bit Busters Club Discord Server</a
-							>.
-						</div>
-						<div class="buttonContainer container">
-							<button id="unpauseButton" class="mainButton">Unpause</button>
-						</div>
-					</div>
-					<div id="overlayPreplayContents">
-						<h3 id="overlayLevelName">LEVEL NAME</h3>
-					</div>
-					<div id="overlayNonlegalContents">
-						<h3>Stop! You've violated the law!</h3>
-						<div class="statsContainer container small">
-							The following glitch has occured:
-							<span id="nonLegalGlitchName"></span>
-						</div>
-						<div class="buttonContainer container">
-							<button id="nonLegalRestartButton" class="mainButton">
-								Restart
-							</button>
-						</div>
-					</div>
-					<div id="overlayGzContents">
-						<h3>Congratulations!</h3>
-						<div class="statsContainer container">
-							You have finished this set. You can try getting better scores, or
-							go for another set!
-						</div>
-						<div class="buttonContainer container">
-							<button id="gzLevelListButton" class="mainButton">
-								Level list
-							</button>
-							<button id="gzSetSelectorButton">Set selector</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="stats">
-				<div>Chips:</div>
-				<output class="chipsText">12</output>
-				<div>Time left:</div>
-				<output class="timeLeftText">120s</output>
-				<div>Bonus points:</div>
-				<output class="bonusPointsText">4200</output>
-			</div>
-			<canvas class="pixelCanvas inventoryCanvas"></canvas>
-			<div class="container" id="hintBox"></div>
-		</main>
-		<main id="exaPlayerPage" class="closedPage playerPage">
-			<div class="viewportContainer container">
-				<div class="viewportArea">
-					<canvas class="viewportCanvas" class="pixelCanvas"></canvas>
-				</div>
-			</div>
-			<div class="container infoContainer">
-				<div class="stats">
-					<div>Chips:</div>
-					<output class="chipsText">12</output>
-					<div>Time left:</div>
-					<output class="timeLeftText">120s</output>
-					<div>Bonus points:</div>
-					<output class="bonusPointsText">4200</output>
-					<div>Total score:</div>
-					<output class="totalScoreText">0</output>
-				</div>
-				<canvas class="pixelCanvas inventoryCanvas"></canvas>
-			</div>
-			<div class="container movesContainer">
-				<div class="movesArea">
-					<span class="recordedMoves"></span
-					><span class="composingPreview"></span>
-				</div>
-			</div>
-		</main>
-		<main class="closedPage playerPage" id="setSelectorPage">
-			<header class="container">
-				<img src="./iconBig.png" />
-				<h1>NotCC</h1>
-				<p>A scoreboard-legal Chip's Challenge 2® emulator.</p>
-			</header>
-			<div id="fileLoaderBar" class="container">
-				<p>Load external files:</p>
-				<button id="loadFile">Load file</button>
-				<button id="loadDirectory">Load directory</button>
-			</div>
-			<template id="setLiTemplate">
-				<li class="container">
-					<div class="setThumbnail"></div>
-					<h3 class="setName"><span>GLP1</span></h3>
-					<p>
-						<span class="setBy">By: <span>G lander</span><br /></span>
-						<span class="setDifficulty"
-							>Difficulty: <span>2</span> / 5<br
-						/></span>
-						<span class="setDescription"><span>The best set ever.</span></span>
-					</p>
-				</li>
-			</template>
-			<ul id="setList"></ul>
-		</main>
-
-		<script src="/src/index.ts" type="module"></script>
+	<body>
+		<div id="app"><!-- SSG here --></div>
+		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
