Use the correct acquisition term when prompting for a non-free set

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -378,7 +378,10 @@
 						The set you are trying to load is non-free, and cannot be legally
 						accessed from the Gliderbot set repository. If you don't have it,
 						you can
-						<a target="_blank" id="nonFreeSteamLink">but it on Steam here</a>.
+						<a target="_blank" id="nonFreeSteamLink"
+							><span id="nonFreeSetAcquisitionTerm">butt it on</span> Steam
+							here</a
+						>.
 					</p>
 					<p>
 						If you have a copy of the set, load it into NotCC with the Load
