Fix two dumb typos (thanks Sharpeye)

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -68,7 +68,7 @@
 				</section>
 				<footer>
 					<button type="button" id="generateReportButton">
-						Generare report</button
+						Generate report</button
 					><button type="submit">Ok</button>
 				</footer>
 			</form>
