--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -15,7 +15,8 @@
 			content="Scoreboard-legal Chip's Challenge 2® emulator and optimization tool."
 		/>
 		<meta name="og:image" content="https://glander.club/notcc/iconBig.png" />
-		<meta name="theme-color" content="#1f61ad" />
+		<meta name="theme-color" content="#1e3a8a" />
+		<link rel="mask-icon" href="/iconMaskable.png" />
 		<title>NotCC</title>
 	</head>
 	<body>
