Don't allow inputs when a route is being imported

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -477,6 +477,9 @@
 			<div class="viewportContainer container">
 				<div class="viewportArea">
 					<canvas class="viewportCanvas" class="pixelCanvas"></canvas>
+					<div class="container blockedMessage">
+						<em>Importing route...</em>
+					</div>
 				</div>
 			</div>
 			<div class="container infoContainer">
