Wrap level names and git hash in parentheses in the score report generator

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -87,7 +87,7 @@
 					<div id="reportText">
 						<div><span class="setName"></span> scores:</div>
 						<div id="linesPoint"></div>
-						<div>NotCC git-%VITE_VERSION%</div>
+						<div>(NotCC git-%VITE_VERSION%)</div>
 					</div>
 				</section>
 				<footer>
