Fix relative links for images

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" href="/icon.png" />
+		<link rel="icon" href="./icon.png" />
 		<meta name="og:type" content="website" />
 		<meta name="og:title" content="NotCC" />
 		<meta
@@ -16,7 +16,8 @@
 		/>
 		<meta name="og:image" content="https://glander.club/notcc/iconBig.png" />
 		<meta name="theme-color" content="#1e3a8a" />
-		<link rel="mask-icon" href="/iconMaskable.png" />
+		<link rel="mask-icon" href="./iconMaskable.png" />
+		<link rel="manifest" href="./manifest.webmanifest" />
 		<title>NotCC</title>
 	</head>
 	<body>
