Fix typo in loading message

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -395,7 +395,7 @@
 			</form>
 		</dialog>
 		<main id="loadingPage" class="container">
-			<p>Loading, standy...</p>
+			<p>Loading standees...</p>
 		</main>
 		<main id="levelPlayerPage" class="container closedPage playerPage">
 			<div class="viewportArea">
